--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,12 +20,12 @@ else(Boost_FOUND)
     message(SEND_ERROR "Cannot find Boost libraries. Terminating." )
 endif(Boost_FOUND)
 
-find_package(OpenBLAS)
-if(OPENBLAS_FOUND)
-    set(EXT_LIBS ${EXT_LIBS} ${OPENBLAS})
-else(OPENBLAS_FOUND)
-    message(SEND_ERROR "Cannot find OpenBLAS libraries. Terminating." )
-endif(OPENBLAS_FOUND)
+#find_package(OpenBLAS)
+#if(OPENBLAS_FOUND)
+#    set(EXT_LIBS ${EXT_LIBS} ${OPENBLAS})
+#else(OPENBLAS_FOUND)
+#    message(SEND_ERROR "Cannot find OpenBLAS libraries. Terminating." )
+#endif(OPENBLAS_FOUND)
 
 find_package(PythonLibs 2.7 REQUIRED)
 if(PYTHONLIBS_FOUND)
