--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,7 +54,7 @@ add_executable(
 )
 
 foreach(exec amun amunmt experimental)
-  target_link_libraries(${exec} ${EXT_LIBS} tcmalloc_minimal)
+  target_link_libraries(${exec} ${EXT_LIBS} tcmalloc_minimal -L/usr/local/atlas/lib -ltatlas -lptcblas)
   set_target_properties(${exec} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 endforeach(exec)
 
